host_prod/frontend/calendar-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-client-service
  namespace: showtime-application
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
