host_prod/frontend/calendar-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-client-service
  namespace: calendar-application
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - calendar.kpognon.eu
    secretName: ingress-secret-calendar
  rules:
  - host: calendar.kpognon.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-client-service
            port:
              number: 80
